tests/Errors/Generic/Formatting/SpaceAfterCast/TooMuchSpace.php
<?php

declare(strict_types=1);

$foo = 123;

echo (string)  $foo; // phpcs:ignore SlevomatCodingStandard.Whitespaces.DuplicateSpaces.DuplicateSpaces
